
        - Server defaults for netsync operations are now only saved if
          the exchange was successful.  The progress messages which have
          been issued for this previously have been removed, since they
          would come up now unexpectedly and would clutter the output of
          commands such as `clone`, `automate remote` and
          `automate remote_stdio`.

        - The `import` command now keeps the created bookkeeping root if
          --dry-run is not specified.  This makes it possible to re-use
          the import directory as workspace and is also more closely
          to what our documentation states, when it says that import
          is basically "setup with a twist".

        - monotone no longer passes syntactically correct, but non-existent
          revision ids through the selector machinery.  The most visible
          place for this change is `automate select`, which no longer
          echoes every possible 40 hex-byte string.

        New Features

        - the 'disapprove' command now accepts a revision range in
          addition to a single revision.

        - New automation command 'log' which behaves identical to the
          normal 'log' command, except that it only outputs the
          revision ids.

        Bugs Fixed

        - monotone no longer asks to pick a branch from a set of branches
          of a revision in which all but one branch have been suspended
          (fixes monotone bug #29843)

        - the 'mv' command now warns when a source is being renamed onto
          itself or one of its children (fixes monotone bug #29484).

        - The annotate command no longer fails if it should print out
          empty or untrusted date cert values
          (fixes monotone bug #30150)

        - monotone now tries harder to find the cancel hint in a commit
          message and only aborts if it can't find it anywhere
          (fixes monotone bug #30215)
