@@ -57,6 +57,15 @@ Xxx Xxx 99 99:99:99 UTC 2010
           commands such as `clone`, `automate remote` and
           `automate remote_stdio`.
 
+        - The following characters have been deprecated in branch names:
+
+                ?,*%+{}[]!^
+
+          as they denote either meta characters in monotone's URI syntax
+          or in globs which are used to resolve branch patterns.
+          monotone now warns on the creation of branches with those
+          characters and gives further directions.
+
         - The `import` command now keeps the created bookkeeping root if
           --dry-run is not specified.  This makes it possible to re-use
           the import directory as workspace and is also more closely
